--- a/OPENLIST/main.css
+++ b/OPENLIST/main.css
@@ -80,11 +80,16 @@ li.completed {
     padding: 30px;
     border: solid rgb(255, 255, 255) 4px;
     height: 80vh;
-    width: 55vw;
+    width: 50vw;
     border-radius: 20px;
     background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
-
+    max-width: 100vw
 }
+@media (max-device-width: 600px) {
+  .container {
+    width:70vw;
+    padding: 22px;
+  }}
 .taskbar{
    text-align: center;
    padding: 10px;
@@ -103,10 +108,18 @@ li.completed {
     height: 60vh;
     text-align: center;
     background-color: rgb(234, 218, 231);
-    width: 55vw;
+    width: 50vw;
+    align-items: center;
+    max-width: 80vw;
     
 
 }
+
+@media (max-device-width: 600px) {
+  .mainbox {
+    width: fit-content;
+  }}
+
 .namelist{
     font-size: 22px;
     width: 250px;
