--- a/OPENLIST/main.css
+++ b/OPENLIST/main.css
@@ -1,15 +1,22 @@
 body {
   font-family: Arial, sans-serif;
-  padding: 2rem;
+  padding: 32px;
   max-width: 100vw;
   height: 100vh;
   margin: auto;
   background-image: radial-gradient( circle 369px at -2.9% 12.9%,  rgba(247,234,163,1) 0%, rgba(236,180,238,0.56) 46.4%, rgba(163,203,247,1) 100.7% );
 }
+
+@media (max-device-width: 600px) {
+  body {
+    max-height: 100vh;
+  }}
+
+
 input[type=text] {
   width: 70%;
   padding: 10px;
-  font-size: 1rem;
+  font-size: 16px;
   border-radius: 6px;
   border: 1px solid #ccc;
   transition: ease-in-out 2s;
@@ -27,8 +34,8 @@ input:hover{
 }
 button.add-btn {
   padding: 10px 15px;
-  font-size: 1rem;
-  margin-left: 0.5rem;
+  font-size: 16px;
+  margin-left: 8px;
   cursor: pointer;
   display: inline;
   transition: ease-in-out 1s;
@@ -38,12 +45,12 @@ button.add-btn:hover{
 }
 
 ul {
-  margin-top: 1rem;
+  margin-top: 16px;
   list-style: none;
   padding-left: 0;
 }
 li {
-  font-size: 1.1rem;
+  font-size: 17px;
   padding: 8px 12px;
   background: #eee; 
   border-radius: 4%;
@@ -70,27 +77,28 @@ li.completed {
   background: none;
   border: none;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 19px;
   cursor: pointer;
   color: green;
 }
 
-.container{
+.container{ 
     margin: auto;
-    padding: 30px;
+    padding: 20px;
     border: solid rgb(255, 255, 255) 4px;
     height: 80vh;
     width: 50vw;
+    align-self: center;
     border-radius: 20px;
     background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
     max-width: 100vw
 }
 @media (max-device-width: 600px) {
   .container {
-    width:70vw;
-    padding: 22px;
+    width:72vw;
+    height: 75vh;
   }}
-.taskbar{
+.taskbar{   
    text-align: center;
    padding: 10px;
    color: rgb(75, 74, 74);
@@ -110,14 +118,14 @@ li.completed {
     background-color: rgb(234, 218, 231);
     width: 50vw;
     align-items: center;
-    max-width: 80vw;
     
 
 }
 
 @media (max-device-width: 600px) {
   .mainbox {
-    width: fit-content;
+    width: 75vw;
+    justify-self: center;
   }}
 
 .namelist{
