--- a/OPENDRAW/index.css
+++ b/OPENDRAW/index.css
@@ -1,8 +1,8 @@
-
+/* Loading overlay */
 #loadingOverlay {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: #222;
+  background-image: radial-gradient( circle 369px at -2.9% 12.9%,  rgba(247,234,163,1) 0%, rgba(236,180,238,0.56) 46.4%, rgba(163,203,247,1) 100.7% );
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,8 +22,8 @@
   border: 6px solid #eee;
   border-top: 6px solid #555;
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 80px;
+  height: 80px;
   animation: spin 1s linear infinite;
 }
 
